syntax = "proto3";

package auth; //Namespace for this .proto file, helps avoid conflicts when there will be multiple .proto files

option go_package = "./;authpb";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string user_id = 1;
    string user_name = 2;
	string token = 3;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
    int32 role_id = 4;
}

message RegisterResponse {
    string user_id = 1;
    string email = 2;
}

//Command for auto compiling auth.proto file - RUN FROM /DMP2SV1 dir
//protoc --proto_path=api/grpc/proto --go_out=internal/protobuffs/authpb --go-grpc_out=internal/protobuffs/authpb --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative api/grpc/proto/auth.proto
/* protoc --proto_path=internal/core/services/authservice/proto \
--go_out=internal/core/services/authservice/proto \
--go-grpc_out=internal/core/services/authservice/proto \
--go_opt=paths=source_relative \
--go-grpc_opt=paths=source_relative \
internal/core/services/authservice/proto/auth.proto */